--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,9 +61,9 @@ font-0 = "Iosevka Nerd Font:size=11;4"
 font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
-modules-left = launcher sep workspaces sep cpu memory filesystem battery
+modules-left = launcher sep workspaces sep cpu memory filesystem
 modules-center = date
-modules-right = bluetooth network sep volume brightness sep sysmenu
+modules-right = bluetooth network sep volume sep sysmenu
 
 separator =
 
