--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -248,3 +248,19 @@ type = custom/script
 exec = bash /home/ilya/dotfiles/polybar/scripts/bluetooth.sh
 interval = 1
 click-left = rofi-bluetooth &
+
+[module/gpu-temp]
+type = custom/script
+exec = nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits
+interval = 1
+format-prefix = 
+format-prefix-foreground = ${color.yellow}
+label = %output%°C
+
+[module/gpu-load]
+type = custom/script
+exec = nvidia-smi --query-gpu=utilization.memory --format=csv,noheader,nounits
+interval = 1
+format-prefix = 
+format-prefix-foreground = ${color.yellow}
+label = " %output%%"
