--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ include-file = ~/dotfiles/polybar/user_modules.ini
 
 [bar/main]
 
-monitor = ${env:MONITOR:}
+monitor = DP-2
 monitor-fallback =
 monitor-strict = false
 override-redirect = false
@@ -61,9 +61,9 @@ font-0 = "Iosevka Nerd Font:size=11;4"
 font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
-modules-left = launcher sep workspaces sep cpu memory filesystem
-modules-center = date
-modules-right = bluetooth network sep volume sep sysmenu
+modules-left = workspaces sep date
+modules-center = cpu temperature gpu-load gpu-temp memory filesystem
+modules-right = bluetooth network sep volume sep keyboard
 
 separator =
 
@@ -94,6 +94,74 @@ double-click-right =
 cursor-click = 
 cursor-scroll = 
 
+[bar/secondary]
+
+monitor = HDMI-0
+monitor-fallback =
+monitor-strict = false
+override-redirect = false
+bottom = false
+fixed-center = true
+
+width = 100%
+height = 34
+
+
+offset-x = 0%
+offset-y = 0%
+
+background = ${color.background}
+foreground = ${color.foreground}
+
+radius-top = 0.0
+radius-bottom = 0.0
+
+line-size = 0
+line-color = ${color.background}
+border-bottom-size = 0
+border-bottom-color = ${color.foreground}
+
+padding = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = "Iosevka Nerd Font:size=11;4"
+font-1 = "Iosevka Nerd Font:size=11;3"
+font-2 = "feather:size=12;3"
+
+modules-left = workspaces sep date
+modules-center = 
+modules-right = bluetooth network sep volume sep keyboard
+
+separator =
+
+
+dim-value = 1.0
+wm-name = i3
+
+locale = 
+
+tray-position = 
+tray-detached = false
+tray-maxsize = 16
+tray-background = ${color.background}
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 0
+tray-scale = 1.0
+enable-ipc = true
+
+click-left = 
+click-middle = 
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+cursor-click = 
+cursor-scroll = 
 
 [settings]
 ; The throttle settings lets the eventloop swallow up til X events
