--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -377,12 +377,12 @@ interval = 1.0
 date = %A, %d %B
 
 ; Optional time format
-time = at %I:%M %p
+time = %H:%M %p
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 date-alt = %A, %d %B %Y
-time-alt = at %k:%M:%S
+time-alt = %k:%M:%S
 
 ; Available tags:
 ;   <label> (default)
