--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -264,3 +264,30 @@ interval = 1
 format-prefix = 
 format-prefix-foreground = ${color.yellow}
 label = " %output%%"
+
+
+[module/upspeed]
+type = internal/network
+interface = enp6s0
+interval = 1.0
+unknown-as-up = true
+format-connected = <label-connected>
+format-connected-prefix = 祝
+format-connected-prefix-foreground = ${color.purple}
+format-disconnected-prefix = 祝
+format-disconnected-prefix-foreground = ${color.purple}
+label-connected = " %upspeed%"
+label-disconnected = " %upspeed%"
+
+[module/downspeed]
+type = internal/network
+interface = enp6s0
+interval = 1.0
+unknown-as-up = true
+format-connected = <label-connected>
+format-connected-prefix = 
+format-connected-prefix-foreground = ${color.purple}
+format-disconnected-prefix = 
+format-disconnected-prefix-foreground = ${color.purple}
+label-connected = " %downspeed%"
+label-disconnected = " %downspeed%"
