--- a/i3/config
+++ b/i3/config
@@ -6,6 +6,7 @@ exec --no-startup-id "redshift -O 3500"
 exec --no-startup-id "setxkbmap -layout us,ru -option grp:shifts_toggle"
 exec --no-startup-id "xrandr --auto --output DP-2 --output HDMI-0 --right-of DP-2 --rotate right"
 exec --no-startup-id "~/dotfiles/polybar/launch.sh"
+exec --no-startup-id "nitrogen --restore"
 for_window [class="Skype"] floating enable border normal
 hide_edge_borders none
 new_window pixel 0
