--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -62,8 +62,8 @@ font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep date
-modules-center = cpu temperature gpu-load gpu-temp memory filesystem
-modules-right = bluetooth network sep volume sep keyboard
+modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed
+modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
 
@@ -132,7 +132,7 @@ font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep date
 modules-center = 
-modules-right = bluetooth network sep volume sep keyboard
+modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
 
