--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ include-file = ~/dotfiles/polybar/user_modules.ini
 
 [bar/main]
 
-monitor = DP-2
+monitor = eDP-1
 monitor-fallback =
 monitor-strict = false
 override-redirect = false
@@ -62,7 +62,7 @@ font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep date
-modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed
+modules-center = battery cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed
 modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
@@ -96,7 +96,7 @@ cursor-scroll =
 
 [bar/secondary]
 
-monitor = HDMI-0
+monitor = DP-3
 monitor-fallback =
 monitor-strict = false
 override-redirect = false
@@ -131,7 +131,7 @@ font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep date
-modules-center = 
+modules-center = battery cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed
 modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
