--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -650,44 +650,11 @@ label = " %mb_used%"
 [module/mpd]
 type = internal/mpd
 
-; Host where mpd is running (either ip or domain name)
-; Can also be the full path to a unix socket where mpd is running.
-;;host = 127.0.0.1
-;;port = 6600
-;;password = mysecretpassword
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
 interval = 1
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <toggle-stop> - gets replaced with <icon-(stop|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone> (deprecated)
-;   <icon-single> - Toggle playing only a single song. Replaces <icon-repeatone>
-;   <icon-consume>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-;   <icon-seekb>
-;   <icon-seekf>
 format-online = <label-song> <icon-prev> <toggle> <icon-next>
 format-online-prefix = 
 format-online-prefix-foreground = ${color.green}
 
-;format-playing = ${self.format-online}
-;format-paused = ${self.format-online}
-;format-stopped = ${self.format-online}
-
-; Available tags:
-;   <label-offline>
 format-offline = <label-offline>
 format-offline-prefix = 
 format-offline-prefix-foreground = ${color.red}
@@ -787,20 +754,10 @@ type = internal/pulseaudio
 ; Default: true
 use-ui-max = false
 
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
 interval = 5
 
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
 
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
 format-muted = <label-muted>
 format-muted-prefix = 
 format-muted-prefix-foreground = ${color.red}
@@ -829,7 +786,7 @@ interval = 0.5
 
 thermal-zone = 0
 
-warn-temperature = 50
+; warn-temperature = 50
 ; Whether or not to show units next to the temperature tokens (°C, °F)
 ; Default: true
 units = true
@@ -896,27 +853,9 @@ label-empty = " Desktop"
 
 [module/workspaces]
 type = internal/xworkspaces
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
 pin-workspaces = true
-
-; Create click handler used to focus desktop
-; Default: true
 enable-click = true
-
-; Create scroll handlers used to cycle desktops
-; Default: true
 enable-scroll = true
-
-; icon-[0-9]+ = <desktop-name>;<icon>
-; NOTE: The desktop name needs to match the name configured by the WM
-; You can get a list of the defined desktops using:
-; $ xprop -root _NET_DESKTOP_NAMES
 icon-0 = 1;1
 icon-1 = 2;2
 icon-2 = 3;3
@@ -929,30 +868,11 @@ icon-8 = 9;9
 icon-9 = 10;10
 icon-default = 0
 
-; Available tags:
-;   <label-monitor>
-;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
-; Default: <label-state>
 format = <label-state>
 
-; Available tokens:
-;   %name%
-; Default: %name%
 label-monitor = %name%
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
 label-active = %icon%
 label-active-foreground = ${color.pink}
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-; Default: %icon%  %name%
 label-occupied = %icon%
 label-occupied-foreground = ${color.cyan}
 
