--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -717,7 +717,7 @@ toggle-off-foreground = ${color.red}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = eno2
+interface = enp6s0
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
@@ -797,7 +797,7 @@ units = true
 format = <label>
 format-prefix = 
 label = %temperature-c%
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon6/temp1_input
+hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon2/temp1_input
 format-prefix-foreground = ${color.cyan}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
