--- a/i3/config
+++ b/i3/config
@@ -16,6 +16,7 @@ new_window pixel 0
 new_float normal
 workspace_layout stacking
 font xft:Hack 11
+no_focus [window_role="pop-up"]
 
 
 
@@ -55,17 +56,19 @@ bindsym $mod+b workspace back_and_forth
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
 
+set_from_resource $mon1 i3wm.mon1 "DP-2"
+set_from_resource $mon2 i3wm.mon2 "HDMI-0"
 
-workspace 1 output DP-2
-workspace 2 output DP-2
-workspace 3 output DP-2
-workspace 4 output DP-2
-workspace 5 output DP-2
-workspace 6 output HDMI-0
-workspace 7 output HDMI-0
-workspace 8 output HDMI-0
-workspace 9 output HDMI-0
-workspace 10 output HDMI-0
+workspace 1 output $mon1
+workspace 2 output $mon1
+workspace 3 output $mon1
+workspace 4 output $mon1
+workspace 5 output $mon1
+workspace 6 output $mon2
+workspace 7 output $mon2
+workspace 8 output $mon2
+workspace 9 output $mon2
+workspace 10 output $mon2
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
