--- a/i3/config
+++ b/i3/config
@@ -51,6 +51,8 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 bindsym $mod+b workspace back_and_forth
+bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
+bindsym $mod+Ctrl+b move container to workspace back_and_forth
 
 bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
