added more window-specific rules

--- a/i3/config
+++ b/i3/config
@@ -162,3 +162,4 @@ assign [class="^[T|t]elegram"] 10
 assign [class="^[S|s]lack"] 10
 assign [class="^[S|s]potify"] 10
 assign [class="^[F|f]irefox"] 5
+assign [class="^[Z|z]oom"] 2
