set everything through xresources

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,7 +27,7 @@ include-file = ~/dotfiles/polybar/user_modules.ini
 
 [bar/main]
 
-monitor = DP-2
+monitor = ${xrdb:mon1}
 monitor-fallback =
 monitor-strict = false
 override-redirect = false
@@ -96,7 +96,7 @@ cursor-scroll =
 
 [bar/secondary]
 
-monitor = HDMI-0
+monitor = ${xrdb:mon2}
 monitor-fallback =
 monitor-strict = false
 override-redirect = false
