added polybar upload

--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -268,7 +268,7 @@ label = " %output%%"
 
 [module/upspeed]
 type = internal/network
-interface = enp6s0
+interface = ${xrdb:wired}
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
@@ -281,7 +281,7 @@ label-disconnected = " %upspeed%"
 
 [module/downspeed]
 type = internal/network
-interface = enp6s0
+interface = ${xrdb:wired}
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
