--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -15,7 +15,7 @@ conky.config = {
 
 	--Placement
 
-	alignment = 'bottom_right',
+	alignment = 'top_right',
 	gap_x = 10,
 	gap_y = 45,
 	minimum_height = 100,
