--- a/i3/config
+++ b/i3/config
@@ -43,7 +43,7 @@ bindsym $mod+d exec --no-startup-id "~/dotfiles/rofi/launcher.sh"
 bindsym $mod+z exec --no-startup-id "~/dotfiles/rofi/launcher_scripts.sh"
 bindsym $mod+p exec --no-startup-id "rofi-pass"
 bindsym $mod+n exec --no-startup-id "networkmanager_dmenu -theme ~/dotfiles/rofi/styles/networkmenu.rasi"
-bindsym $mod+y exec --no-startup-id "rofi-bluetooth"
+bindsym $mod+y exec --no-startup-id "~/dotfiles/rofi-bluetooth/rofi-bluetooth"
 bindsym $mod+Shift+s exec --no-startup-id /home/ilya/dotfiles/rofi/powermenu.sh
 
 bindsym $mod+Left focus left
