--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -7,7 +7,8 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'rofi'",
 ];
 fading = false
 fade-in-step = 0.03;
