--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -247,7 +247,7 @@ label-close-padding = 1
 type = custom/script
 exec = bash /home/ilya/dotfiles/polybar/scripts/bluetooth.sh
 interval = 1
-click-left = rofi-bluetooth &
+click-left = ~/dotfiles/rofi-bluetooth/rofi-bluetooth &
 
 [module/gpu-temp]
 type = custom/script
