--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -62,7 +62,7 @@ font-1 = "Iosevka Nerd Font:size=11;3"
 font-2 = "feather:size=12;3"
 
 modules-left = workspaces sep date
-modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed
+modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed battery
 modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
