updated picom and gitignore

--- a/i3/config
+++ b/i3/config
@@ -5,12 +5,11 @@ exec --no-startup-id "redshift -O 3500"
 exec --no-startup-id "setxkbmap -layout us,ru -option grp:shifts_toggle"
 exec --no-startup-id "~/dotfiles/polybar/launch.sh"
 exec --no-startup-id "nitrogen --restore"
-exec --no-startup-id "picom --experimental-backends -b"
+exec --no-startup-id "picom -b"
 exec_always --no-startup-id flashfocus
 exec --no-startup-id "conky -c ~/dotfiles/conky/conky.conf"
 exec --no-startup-id "conky -c ~/dotfiles/conky/conky2.conf"
 
-for_window [class="Skype"] floating enable border normal
 hide_edge_borders none
 new_window pixel 0
 new_float normal
@@ -161,5 +160,4 @@ assign [class="^[D|d]iscord"] 10
 assign [class="^[T|t]elegram"] 10
 assign [class="^[S|s]lack"] 10
 assign [class="^[S|s]potify"] 10
-assign [class="^[F|f]irefox"] 5
 assign [class="^[Z|z]oom"] 2
