--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,4 +1,4 @@
-fading = true;
+fading = false;
 fade-delta = 5;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
@@ -23,7 +23,7 @@ invert-color-include = [ ];
 #
 #################################
 
-shadow = true;
+shadow = false;
 shadow-radius = 15;
 shadow-offset-x = -20;
 shadow-offset-y = -20;
@@ -42,18 +42,6 @@ shadow-exclude = [
 
 #################################
 #
-# Blur
-#
-#################################
-blur: {
-	method = "dual_kawase";
-	strength = 2;
-};
-
-
-
-#################################
-#
 # Opacity
 #
 #################################
@@ -66,7 +54,7 @@ inactive-opacity-override = false;
 
 
 opacity-rule = [
-      "80:class_g *?= 'Rofi'",
+      "90:class_g *?= 'Rofi'",
 ];
 
 
