--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -57,9 +57,7 @@ padding = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Iosevka Nerd Font:size=11;4"
-font-1 = "Iosevka Nerd Font:size=11;3"
-font-2 = "feather:size=12;3"
+font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
 
 modules-left = workspaces sep date
 modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed battery
@@ -126,9 +124,7 @@ padding = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Iosevka Nerd Font:size=11;4"
-font-1 = "Iosevka Nerd Font:size=11;3"
-font-2 = "feather:size=12;3"
+font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
 
 modules-left = workspaces sep date
 modules-center = 
