--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -1,447 +1,82 @@
-;; ┌────────────────────────────────────────────────────────────────┐
-;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▄█░█▀█░█▀▄░█░█░█░░░█▀▀░█▀▀│
-;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░█░█░█░█░█░█░█░█░░░█▀▀░▀▀█│
-;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀░▀░▀▀▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
-;; └────────────────────────────────────────────────────────────────┘
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/alsa]
-type = internal/alsa
-
-; Soundcard to be used
-; Usually in the format hw:# where # is the card number
-; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
-
-; Name of the master, speaker and headphone mixers
-; Use the following command to list available mixer controls:
-; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
-; If master, speaker or headphone-soundcard isn't the default, 
-; use `amixer -c # scontrols` instead where # is the number 
-; of the master, speaker or headphone soundcard respectively
-;
-; Default: Master
-master-mixer = Master
-
-; Optionally define speaker and headphone mixers
-; Default: none
-;;speaker-mixer = Speaker
-; Default: none
-;;headphone-mixer = Headphone
-
-; NOTE: This is required if headphone_mixer is defined
-; Use the following command to list available device controls
-; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f: %s\n' '\1' '\2'/e" | sort
-; You may also need to use `amixer -c # controls` as above for the mixer names
-; Default: none
-;;headphone-id = 9
-
-; Use volume mapping (similar to amixer -M and alsamixer), where the increase in volume is linear to the ear
-; Default: false
-;;mapped = true
-
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
-interval = 5
-
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-volume = <ramp-volume> <label-volume>
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-format-muted = <label-muted>
-format-muted-prefix = 
-format-muted-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %percentage% (default)
-label-volume = %percentage%%
-
-; Available tokens:
-;   %percentage% (default
-label-muted = " Muted"
-label-muted-foreground = ${color.sep}
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-foreground = ${color.blue}
-
-; If defined, it will replace <ramp-volume> when
-; headphones are plugged in to `headphone_control_numid`
-; If undefined, <ramp-volume> will be used for both
-; Only applies if <ramp-volume> is used
-ramp-headphones-0 = 
-ramp-headphones-background = ${color.blue}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/backlight]
-;type = internal/xbacklight
-type = internal/backlight
-
-; Use the following command to list available cards:
-; $ ls -1 /sys/class/backlight/
-card = intel_backlight
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-;   <bar>
-format = <ramp> <label>
-
-; Available tokens:
-;   %percentage% (default)
-label = %percentage%%
-
-; Only applies if <ramp> is used
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-foreground = ${color.lime}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/battery]
 type = internal/battery
-
-; This is useful in case the battery never reports 100% charge
 full-at = 99
-
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = AC
-
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-;
-; Default: 5
 poll-interval = 2
-
-; see "man date" for details on how to format the time string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
-; Default: %H:%M:%S
 time-format = %H:%M
-
-; Available tags:
-;   <label-charging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-charging>
 format-charging = <label-charging>
-format-charging-prefix = ""
+format-charging-prefix = " "
 format-charging-prefix-foreground = ${color.green}
-
-; Available tags:
-;   <label-discharging> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
-;   <animation-discharging>
 format-discharging = <label-discharging>
-format-discharging-prefix = ""
+format-discharging-prefix = " "
 format-discharging-prefix-foreground = ${color.pink}
-
-; Available tags:
-;   <label-full> (default)
-;   <bar-capacity>
-;   <ramp-capacity>
 format-full = <label-full>
 format-full-prefix = 
 format-full-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current charge rate in watts)
 label-charging = " %percentage%%"
-
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
 label-discharging = " %percentage%%"
-
-; Available tokens:
-;   %percentage% (default)
 label-full = " Full"
-
-; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-
-; Only applies if <bar-capacity> is used
-;bar-capacity-width = 10
-
-; Only applies if <animation-charging> is used
 animation-charging-0 = 
 animation-charging-1 = 
-
-; Framerate in milliseconds
 animation-charging-framerate = 750
-
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/cpu]
 type = internal/cpu
-
-; Seconds to sleep between updates
-; Default: 1
 interval = 1
-
-; Available tags:
-;   <label> (default)
-;   <bar-load>
-;   <ramp-load>
-;   <ramp-coreload>
-;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
+format-prefix = " "
 format-prefix-foreground = ${color.cyan}
-
-; Available tokens:
-;   %percentage% (default) - total cpu load averaged over all cores
-;   %percentage-sum% - Cumulative load on all cores
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
 label = " %percentage%%"
-
-; Spacing between individual per-core ramps
-;;ramp-coreload-spacing = 1
-;;ramp-coreload-0 = ${cpu.load0}
-;;ramp-coreload-1 = ${cpu.load1}
-
-;;ramp-load-0 = ${cpu.load0}
-;;ramp-load-1 = ${cpu.load1}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/date]
 type = internal/date
-
-; Seconds to sleep between updates
 interval = 1.0
-
-; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
-; NOTE: if you want to use syntax tags here you need to use %%{...}
 date = %A, %d %B
-
-; Optional time format
 time = %H:%M %p
-
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
 date-alt = %A, %d %B %Y
 time-alt = %k:%M:%S
-
-; Available tags:
-;   <label> (default)
 format = <label>
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %date%
-;   %time%
-; Default: %date%
 label = %date% %time%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/filesystem]
 type = internal/fs
-
-; Mountpoints to display
 mount-0 = /
-;;mount-1 = /home
-;;mount-2 = /var
-
-; Seconds to sleep between updates
-; Default: 30
 interval = 30
-
-; Display fixed precision values
-; Default: false
 fixed-values = true
-
-; Spacing between entries
-; Default: 2
-;;spacing = 4
-
-; Available tags:
-;   <label-mounted> (default)
-;   <bar-free>
-;   <bar-used>
-;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = 
+format-mounted-prefix = " "
 format-mounted-prefix-foreground = ${color.orange}
-
-; Available tags:
-;   <label-unmounted> (default)
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = 
+format-unmounted-prefix = " "
 format-unmounted-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %mountpoint%
-;   %type%
-;   %fsname%
-;   %percentage_free%
-;   %percentage_used%
-;   %total%
-;   %free%
-;   %used%
-; Default: %mountpoint% %percentage_free%%
 label-mounted = " %free%"
-
-; Available tokens:
-;   %mountpoint%
-; Default: %mountpoint% is not mounted
 label-unmounted = " %mountpoint%: NA"
 
 
 
 [module/memory]
 type = internal/memory
-
-; Seconds to sleep between updates
-; Default: 1
 interval = 1
-
-; Available tags:
-;   <label> (default)
-;   <bar-used>
-;   <bar-free>
-;   <ramp-used>
-;   <ramp-free>
-;   <bar-swap-used>
-;   <bar-swap-free>
-;   <ramp-swap-used>
-;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = "ﱪ "
 format-prefix-foreground = ${color.blue}
-
-; Available tokens:
-;   %percentage_used% (default)
-;   %percentage_free%
-;   %gb_used%
-;   %gb_free%
-;   %gb_total%
-;   %mb_used%
-;   %mb_free%
-;   %mb_total%
-;   %percentage_swap_used%
-;   %percentage_swap_free%
-;   %mb_swap_total%
-;   %mb_swap_free%
-;   %mb_swap_used%
-;   %gb_swap_total%
-;   %gb_swap_free%
-;   %gb_swap_used%
-
 label = " %mb_used%"
 
-; Only applies if <ramp-used> is used
-;;ramp-used-0 = ${memory.used0}
-;;ramp-used-1 = ${memory.used1}
-;;ramp-used-2 = ${memory.used2}
-
-; Only applies if <ramp-free> is used
-;;ramp-free-0 = ${memory.free0}
-;;ramp-free-1 = ${memory.free1}
-;;ramp-free-2 = ${memory.free2}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-interval = 1
-format-online = <label-song> <icon-prev> <toggle> <icon-next>
-format-online-prefix = 
-format-online-prefix-foreground = ${color.green}
-
-format-offline = <label-offline>
-format-offline-prefix = 
-format-offline-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %artist%
-;   %album-artist%
-;   %album%
-;   %date%
-;   %title%
-; Default: %artist% - %title%
-label-song =  " %artist% - %title%"
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default: %elapsed% / %total%
-label-time = %elapsed% / %total%
-label-time-background = ${color.background-alt}
-label-time-padding = 1
-
-; Available tokens:
-;   None
-label-offline = " Offline"
-
-; Only applies if <icon-X> is used
-icon-play = 
-icon-play-foreground = ${color.cyan}
-icon-pause = 
-icon-pause-foreground = ${color.cyan}
-icon-stop = 
-icon-stop-foreground = ${color.red}
-icon-next = 
-icon-next-foreground = ${color.cyan}
-icon-prev = 
-icon-prev-foreground = ${color.cyan}
-icon-seekf = 
-icon-seekb = 
-icon-random = 
-icon-repeat = 
-icon-repeatone = 
-icon-single = 
-icon-consume =
-
-; Used to display the state of random/repeat/repeatone/single
-; Only applies if <icon-[random|repeat|repeatone|single]> is used
-toggle-on-foreground = ${color.primary}
-toggle-off-foreground = ${color.red}
-
-; Only applies if <bar-progress> is used
-;;bar-progress-width = 45
-;;bar-progress-indicator = |
-;;bar-progress-fill = ─
-;;bar-progress-empty = ─
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
@@ -450,10 +85,10 @@ interface = ${xrdb:wired}
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
-format-connected-prefix = 
+format-connected-prefix = ""
 format-connected-prefix-foreground = ${color.purple}
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = 
+format-disconnected-prefix = ""
 format-disconnected-prefix-foreground = ${color.orange}
 label-connected = " "
 label-disconnected = " "
@@ -464,67 +99,23 @@ interface = ${xrdb:wireless}
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
-format-connected-prefix = 
+format-connected-prefix = "直 "
 format-connected-prefix-foreground = ${color.purple}
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = 
+format-disconnected-prefix = "睊 "
 format-disconnected-prefix-foreground = ${color.orange}
 label-connected = " %essid%"
 label-disconnected = " "
 
-[module/pulseaudio]
-type = internal/pulseaudio
 
-; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
-; If not, uses default sink
-; sink = alsa_output.pci-0000_03_00.6.analog-stereo
-
-; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
-; Default: true
-use-ui-max = false
-
-interval = 5
-
-format-volume = <ramp-volume> <label-volume>
-
-format-muted = <label-muted>
-format-muted-prefix = 
-format-muted-prefix-foreground = ${color.red}
-
-; Available tokens:
-;   %percentage% (default)
-label-volume = %percentage%%
-
-; Available tokens:
-;   %percentage% (default
-label-muted = " Muted"
-label-muted-foreground = ${color.sep}
-
-; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-foreground = ${color.blue}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
 type = internal/temperature
-
 interval = 0.5
-
 thermal-zone = 0
-
-; warn-temperature = 50
-; Whether or not to show units next to the temperature tokens (°C, °F)
-; Default: true
 units = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
 format = <label>
-format-prefix = 
+format-prefix = " "
 label = %temperature-c%
 hwmon-path = ${xrdb:hwmon-path}
 format-prefix-foreground = ${color.cyan}
@@ -533,28 +124,12 @@ format-prefix-foreground = ${color.cyan}
 
 [module/keyboard]
 type = internal/xkeyboard
-
-; List of indicators to ignore
 blacklist-0 = num lock
 blacklist-1 = scroll lock
-
-; Available tags:
-;   <label-layout> (default)
-;   <label-indicator> (default)
 format = <label-layout> <label-indicator>
-format-prefix = 
+format-prefix = " "
 format-prefix-foreground = ${color.blue-gray}
-
-; Available tokens:
-;   %layout%
-;   %name%
-;   %number%
-; Default: %layout%
 label-layout = " %layout%"
-
-; Available tokens:
-;   %name%
-; Default: %name%
 label-indicator-on = "%name%"
 label-indicator-on-foreground = ${color.cyan}
 
@@ -562,20 +137,11 @@ label-indicator-on-foreground = ${color.cyan}
 
 [module/title]
 type = internal/xwindow
-
-; Available tags:
-;   <label> (default)
 format = <label>
 format-prefix = 
 format-foreground = ${color.foreground}
-
-; Available tokens:
-;   %title%
-; Default: %title%
 label = " %title%"
 label-maxlen = 30
-
-; Used instead of label when there is no window title
 label-empty = " Desktop"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
