fixed incorrect links

--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -7,22 +7,27 @@ adapter = AC
 poll-interval = 2
 time-format = %H:%M
 format-charging = <label-charging>
-format-charging-prefix = " "
+format-charging-prefix = "⚡"
 format-charging-prefix-foreground = ${color.green}
-format-discharging = <label-discharging>
-format-discharging-prefix = " "
+format-discharging = <ramp-capacity><label-discharging>
+format-discharging-prefix = " "
 format-discharging-prefix-foreground = ${color.pink}
 format-full = <label-full>
-format-full-prefix = 
+format-full-prefix = " "
 format-full-prefix-foreground = ${color.red}
 label-charging = " %percentage%%"
 label-discharging = " %percentage%%"
 label-full = " Full"
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-foreground = ${color.red}
+ramp-capacity-0 = ""
+ramp-capacity-1 = ""
+ramp-capacity-2 = ""
+ramp-capacity-3 = ""
+ramp-capacity-4 = ""
+ramp-capacity-5 = ""
+ramp-capacity-6 = ""
+ramp-capacity-7 = ""
+ramp-capacity-8 = ""
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-framerate = 750
