stripped extra stuff

--- a/polybar/bars.ini
+++ b/polybar/bars.ini
@@ -23,7 +23,7 @@ speaker-mixer = Speaker
 headphone-mixer = Headphone
 headphone-id = 16
 interval = 5
-format-volume = <ramp-volume> <bar-volume>
+format-volume = <ramp-volume> <label-volume>
 format-muted = <label-muted>
 format-muted-prefix = " "
 format-muted-prefix-foreground = ${color.red}
