--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -57,10 +57,10 @@ padding = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
+font-0 = "Iosevka Nerd Font:style=Mono:size=11;4"
 
 modules-left = workspaces sep date
-modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed battery
+modules-center = cpu memory filesystem upspeed downspeed battery
 modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
@@ -126,9 +126,9 @@ module-margin-right = 1
 
 font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
 
-modules-left = workspaces sep date
+modules-left = workspaces date
 modules-center = 
-modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
+modules-right = wired-network wireless-network bluetooth volume keyboard
 
 separator =
 
