--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -1,9 +1,9 @@
 
 [module/battery]
 type = internal/battery
-full-at = 99
-battery = BAT0
-adapter = AC
+full-at = 95
+battery = BAT1
+adapter = ADP1
 poll-interval = 2
 time-format = %H:%M
 format-charging = <label-charging>
@@ -16,7 +16,7 @@ format-full = <label-full>
 format-full-prefix = " "
 format-full-prefix-foreground = ${color.red}
 label-charging = " %percentage%%"
-label-discharging = " %percentage%%"
+label-discharging = " %time%"
 label-full = " Full"
 ramp-capacity-foreground = ${color.red}
 ramp-capacity-0 = ""
@@ -69,7 +69,7 @@ format-mounted-prefix-foreground = ${color.orange}
 format-unmounted = <label-unmounted>
 format-unmounted-prefix = " "
 format-unmounted-prefix-foreground = ${color.red}
-label-mounted = " %free%"
+label-mounted = " %percentage_used%%"
 label-unmounted = " %mountpoint%: NA"
 
 
@@ -80,7 +80,7 @@ interval = 1
 format = <label>
 format-prefix = "ﱪ "
 format-prefix-foreground = ${color.blue}
-label = " %mb_used%"
+label = " %percentage_used%%"
 
 
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
