--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -104,7 +104,7 @@ interface = ${xrdb:wireless}
 interval = 1.0
 unknown-as-up = true
 format-connected = <label-connected>
-format-connected-prefix = "直 "
+format-connected-prefix = "󰖩 "
 format-connected-prefix-foreground = ${color.purple}
 format-disconnected = <label-disconnected>
 format-disconnected-prefix = "睊 "
