--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -57,7 +57,9 @@ padding = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
+
+font-0 = "Iosevka NF:size=12;0"
+font-1 = "MesloLGS NF:size=12;0"
 
 modules-left = workspaces sep date
 modules-center = cpu temperature gpu-load gpu-temp memory filesystem upspeed downspeed battery
@@ -104,6 +106,9 @@ fixed-center = true
 width = 100%
 height = 34
 
+font-0 = "Iosevka NF:size=12;0"
+font-1 = "MesloLGS NF:size=12;0"
+
 
 offset-x = 0%
 offset-y = 0%
@@ -123,8 +128,6 @@ padding = 2
 
 module-margin-left = 1
 module-margin-right = 1
-
-font-0 = "Iosevka Nerd Font:style=Mono:size=12;4"
 
 modules-left = workspaces sep date
 modules-center = 
