--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -130,7 +130,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 modules-left = workspaces sep date
-modules-center = 
+modules-center = spotify
 modules-right = wired-network wireless-network bluetooth sep volume sep keyboard
 
 separator =
