--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -53,3 +53,12 @@ format-disconnected-prefix = 
 format-disconnected-prefix-foreground = ${color.purple}
 label-connected = " %downspeed%"
 label-disconnected = " %downspeed%"
+
+
+[module/spotify]
+type = custom/script
+interval = 1
+exec = python ~/dotfiles/polybar/scripts/spotify_status.py -f '{play_pause} {artist} - {song}'
+click-left = playerctl --player=spotify play-pause 
+click-right = playerctl --player=spotify next 
+click-middle = playerctl --player=spotify previous 
