--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -58,7 +58,7 @@ label-disconnected = " %downspeed%"
 [module/spotify]
 type = custom/script
 interval = 1
-exec = python ~/dotfiles/polybar/scripts/spotify_status.py -f '{play_pause} {artist} - {song}'
+exec = python ~/dotfiles/polybar/scripts/spotify_status.py -f '{play_pause} {artist} - {song}' -t 120
 click-left = playerctl --player=spotify play-pause 
 click-right = playerctl --player=spotify next 
 click-middle = playerctl --player=spotify previous 
